# sgp4-satellite-tracker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  smoke_test.py
.streamlit/: config.toml
screenshots/: iss_orbit_3d.html  multi_orbit_3d.html
src/sat_tracker/: __init__.py  __main__.py  cli.py  config.py  coordinates.py  passes.py  propagator.py  tle_fetcher.py
src/sat_tracker/dashboard/: __init__.py  animation.py  app.py  components.py
src/sat_tracker/dashboard/static/: curated_satellites.json
src/sat_tracker/dashboard/static/bundled_tles/: tle_20580.txt  tle_22195.txt  tle_23877.txt  tle_24876.txt  tle_25544.txt  tle_25867.txt  tle_25933.txt  tle_25994.txt  tle_26360.txt  tle_26407.txt  tle_26605.txt  tle_26624.txt  tle_26690.txt  tle_26958.txt  tle_27424.txt  tle_27663.txt  tle_27704.txt  tle_28129.txt  tle_28190.txt  tle_28230.txt  tle_28361.txt  tle_28376.txt  tle_28474.txt  tle_28485.txt  tle_28874.txt  tle_28912.txt  tle_29.txt  tle_29055.txt  tle_29486.txt  tle_29601.txt  tle_32260.txt  tle_32384.txt  tle_32711.txt  tle_33053.txt  tle_340.txt  tle_36585.txt  tle_37753.txt  tle_37843.txt  tle_37849.txt  tle_37869.txt  (+89 more)
src/sat_tracker/visualization/: __init__.py  common.py  figures.py  ground_track.py  interactive.py  orbit_3d.py
tests/: conftest.py  test_cli.py  test_coordinates.py  test_figures.py  test_ground_track.py  test_orbit_3d.py  test_passes.py  test_propagator.py  test_tle_fetcher.py  test_visualization_common.py
