[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-tracker"
version = "0.1.0"
description = "Satellite tracking and orbit propagation using TLE data and SGP4."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alex Woods" }]
keywords = ["satellite", "sgp4", "tle", "orbit", "celestrak"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "sgp4>=2.23",
    "skyfield>=1.46",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
viz = [
    "cartopy>=0.22",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "kaleido>=0.2,<1.0",
]
dashboard = [
    "cartopy>=0.22",
    "plotly>=5.18",
    "kaleido>=0.2,<1.0",
    "streamlit>=1.30",
]

[project.scripts]
sat-tracker = "sat_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
