[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-tracker"
version = "0.2.1"
description = "Satellite tracking and orbit propagation using TLE data and SGP4."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alex Woods" }]
keywords = ["satellite", "sgp4", "tle", "orbit", "celestrak"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "sgp4>=2.23",
    "skyfield>=1.46",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
viz = [
    "cartopy>=0.22",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "kaleido>=0.2,<1.0",
]
dashboard = [
    "cartopy>=0.22",
    "plotly>=5.18",
    "kaleido>=0.2,<1.0",
    "streamlit>=1.30",
]

[project.scripts]
sat-tracker = "sat_tracker.cli:main"

[tool.setuptools]
# Belt-and-braces with the explicit package-data block below — older
# setuptools versions and some pip wheel caches honour one path or the
# other but not both, so we declare both.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Dashboard ships two non-Python assets:
#   - static/curated_satellites.json: search list for the sidebar.
#   - static/bundled_tles/*.txt: snapshot TLEs (ISS, Hubble) used as a
#     last-resort fallback when the live CelesTrak fetch is blocked
#     (Streamlit Cloud's outbound to celestrak.org is firewalled at
#     the IP-range level — confirmed via ConnectTimeoutError).
"sat_tracker.dashboard" = [
    "static/*.json",
    "static/bundled_tles/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
